adiciono a aula de position fixed como prática

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <nav>menu</nav>
+    </header>
+    
     <h1>Listas</h1>
 
     <h2>Lista desordenada</h2>
